# graphml-viewer

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
.cursor/rules/: rule-python.mdc
config/: settings.py
src/graphml_viewer/: __init__.py  analysis.py  cli.py  graph_loader.py  interactive.py  visualizer.py
src/graphml_viewer/exceptions/: __init__.py
src/graphml_viewer/models/: __init__.py  graph_models.py  visualization_models.py
src/graphml_viewer/services/: __init__.py  graph_service.py
src/graphml_viewer/utils/: __init__.py  logging.py
tests/: test_basic.py
